--- a/src/app/App.html
+++ b/src/app/App.html
@@ -16,16 +16,16 @@
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <router-link class="nav-link active" to="/">Dashboard</router-link>
+                        <router-link class="nav-link active" to="/">
+                            <i class="fas fa-chalkboard"></i>
+                            Dashboard
+                        </router-link>
                     </li>
                     <li class="nav-item">
-                        <router-link class="nav-link" to="/about">Orders</router-link>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="far fa-envelope"></i>
-                            Products
-                        </a>
+                        <router-link class="nav-link" to="/definition">
+                            <i class="fas fa-cogs"></i>
+                            Process Definitions
+                        </router-link>
                     </li>
                 </ul>
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
