DX-1000 downgrade to vue 2

--- a/src/app/App.html
+++ b/src/app/App.html
@@ -1,3 +1,4 @@
+<section class="w-100">
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">process:flow</a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
@@ -67,3 +68,4 @@
         </main>
     </div>
 </div>
+</section>
