DX-1000 Bind Okta outh

--- a/src/app/App.html
+++ b/src/app/App.html
@@ -4,8 +4,12 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">
-                Sign in
+            <a v-if='authState.isAuthenticated' class="nav-link" href="#" @click="logout">
+                Sign out.
+                <i class="fas fa-sign-out-alt"></i>
+            </a>
+            <a v-else class="nav-link" href="#" @click="login">
+                Sign in.
                 <i class="fas fa-sign-in-alt"></i>
             </a>
         </li>
